fixed footer icon alignment

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,3 +6,11 @@
   width: 100%;
   background-color: transparentize(mat-color($photo-app-accent),0.3);
 }
+
+.footer-icon {
+  margin: 10px;
+}
+
+a {
+  outline: none;
+}
